--- a/news/weekly-update/2022w02.md
+++ b/news/weekly-update/2022w02.md
@@ -8,7 +8,7 @@ image: ./assets/02.png
 og_url: https://www.bilibili.com/video/BV1h34y1n7A3
 ---
 
-<iframe src="https://player.bilibili.com/player.html?aid=56850347" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="false"></iframe>
+<iframe src="https://player.bilibili.com/player.html?aid=56850347" scrolling="no" frameBorder="no" framespacing="0" allowFullScreen="false"></iframe>
 
 <!--truncate-->
 
