--- a/navigation/index.mdx
+++ b/navigation/index.mdx
@@ -43,4 +43,11 @@ import Nav from './Nav';
 
 ### 导航3
 
+显示视频
+  https://www.bilibili.com/video/BV1BZ4y1H79N?spm_id_from=333.337.search-card.all.click&vd_source=839fcf3ea3c7dede9ec45bbf0da80d80
+
+BV1BZ4y1H79N 此为哔哩哔哩网站 video/后面的字符
+
+<iframe src="https://player.bilibili.com/player.html?bvid=BV1BZ4y1H79N" scrolling="no" frameBorder="no" framespacing="0" allowFullScreen={false}></iframe>
+
 ### 导航4
