--- a/news/weekly-update/2022w01.md
+++ b/news/weekly-update/2022w01.md
@@ -8,6 +8,6 @@ image: ./assets/02.png
 og_url: https://sxxxx/xxx
 ---
 
-<iframe src="https://player.bilibili.com/player.html?bvid=BV1h34y1n7A3" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="false"></iframe>
+<iframe src="https://player.bilibili.com/player.html?bvid=BV1h34y1n7A3" scrolling="no" frameBorder="no" framespacing="0" allowFullScreen="false"></iframe>
 
 <!--truncate-->
