--- a/news/weekly-update/2022w01.md
+++ b/news/weekly-update/2022w01.md
@@ -4,11 +4,10 @@ description: "Weekly Update: 小记hardhat悲剧"
 authors: [ban]
 tags: [weekly Update]
 date: 2022-07-26
-image: ././assets/02.png
-og_url: https://sxxxx/xxx
 ---
+import {EmbedGiscus} from '@site/src/components/Talk'
 
-# 小记
+## 小记
 
 扩展阅读：
 一人学习中无意中发现了 hardhat 通用测试地址主网地址有 42eth，考虑样把它拿走，于是走上了测试之路，当然最后的结果是个悲剧
@@ -18,7 +17,7 @@ og_url: https://sxxxx/xxx
 
 ![image.png](./assets/image-20220726142248-epe67q9.png)
 
-得到了一个地址 `0x5FbDB2315678afecb367f032d93F642f64180aa3`，然后就随意去 https://etherscan.io/浏览器查看了下，竟有资产
+得到了一个地址 `0x5FbDB2315678afecb367f032d93F642f64180aa3`，然后就随意去 [etherscan](https://etherscan.io/address/0x5FbDB2315678afecb367f032d93F642f64180aa3) 浏览器查看了下，竟有资产
 
 ![image.png](./assets/image-20220726142022-n5iwgl9.png)
 
@@ -71,3 +70,5 @@ Private Key: 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
 ![image.png](./assets/image-20220726143956-ioebjq0.png)
 
 嗯，结果是个悲剧了，好的大家，再见了~
+
+<EmbedGiscus>w01</EmbedGiscus>
