--- a/news/weekly-update/2022w01.md
+++ b/news/weekly-update/2022w01.md
@@ -69,6 +69,15 @@ Private Key: 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
 
 ![image.png](./assets/image-20220726143956-ioebjq0.png)
 
+conflux呢~，好吧，nonce也没了
+![img.png](assets/img.png)
+
 嗯，结果是个悲剧了，好的大家，再见了~
+
+:::warning
+所以私钥是多么的重要，丢失了可能会导致其他网络的合约丢失，
+另外工厂合约也需要注意创建合约的一些问题，不同链上创建的相同的工厂地址，
+也存在被上述的理论方法盗走的可能，**注意合约的创建**
+:::
 
 <EmbedGiscus>w01</EmbedGiscus>
