--- a/news/weekly-update/2022w01.md
+++ b/news/weekly-update/2022w01.md
@@ -1,5 +1,5 @@
 ---
-title: "Weekly Update: 小记hardhat悲剧"
+title: "小记hardhat悲剧"
 description: "Weekly Update: 小记hardhat悲剧"
 authors: [ban]
 tags: [weekly Update]
