--- a/fun/funny/2022f01.md
+++ b/fun/funny/2022f01.md
@@ -245,7 +245,9 @@ date: 2022-08-05
 
 >古文：事关休戚已成空，万里相思一夜中
 
-作者：木子家女子
-链接：https://www.zhihu.com/question/285212032/answer/2086696834
-来源：知乎
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+:::info引用
+- 作者：木子家女子
+- 链接：https://www.zhihu.com/question/285212032/answer/2086696834
+- 来源：知乎
+:::
+
