--- a/fun/funny/2022f01.md
+++ b/fun/funny/2022f01.md
@@ -37,10 +37,12 @@ date: 2022-08-05
 >古文：我自飘零我自狂，犹如野鹤游四方
 
 8：原文：穷
-古文:一身清贫怎敢入繁华，两袖轻轻怎敢负人家
+
+>古文：一身清贫怎敢入繁华，两袖轻轻怎敢负人家
 
 9：原文:我被自己帅的睡不着了
-古文:玉树临风美少年，揽镜自顾夜不眠
+
+>古文：玉树临风美少年，揽镜自顾夜不眠
 
 10：原文：你站着不说话，就十分美好
 
@@ -219,7 +221,8 @@ date: 2022-08-05
 >古文：静待一树花开，盼你叶落归来
 
 54：原文：无论如何，我都会等你
-古文:寒灯纸上，梨花雨凉，我等风雪又一年
+
+>古文：寒灯纸上，梨花雨凉，我等风雪又一年
 
 55：原文：简直太脏了
 
