--- a/fun/funny/2022f02.md
+++ b/fun/funny/2022f02.md
@@ -1,9 +1,9 @@
 ---
-title: "有哪些曾惊艳到你了的古诗词？"
-description: "有哪些曾惊艳到你了的古诗词？"
+title: "打造亿万级公司梦想破灭后的自我反思"
+description: "打造亿万级公司梦想破灭后的自我反思"
 authors: [ban]
 tags: [funny]
-date: 2022-08-05
+date: 2022-08-08
 ---
 import {EmbedTweet} from '@site/src/components/Social'
 
