--- a/news/weekly-update/2022w01.md
+++ b/news/weekly-update/2022w01.md
@@ -70,7 +70,7 @@ Private Key: 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
 ![image.png](./assets/image-20220726143956-ioebjq0.png)
 
 conflux呢~，好吧，nonce也没了
-![img.png](assets/img.png)
+![img.png](assets/img01.png)
 
 嗯，结果是个悲剧了，好的大家，再见了~
 
