--- a/news/weekly-update/2022w02.md
+++ b/news/weekly-update/2022w02.md
@@ -6,7 +6,7 @@ tags: [weekly Update]
 date: 2022-08-04
 ---
 
-![img.png](img.png)
+![img.png](assets/img001.png)
 
 原文引用：[medium jerga](https://medium.com/eincode/differences-between-web-2-0-and-web-3-0-dcc045b07eef)
 
