--- a/news/weekly-update/2022w07.md
+++ b/news/weekly-update/2022w07.md
@@ -14,6 +14,7 @@ date: 2022-09-6
 4. 使用：继承自ERC721的实现，也同样兼容市场上的钱包、NFT市场
 5. 它将成为头部通证标准之一
 
+[Solv EIP-3525描述](https://docs.solv.finance/solv-documentation/financial-nfts/EIP-3525)
 
 ### 正文
 作者：Solv 研究组
