--- a/news/weekly-update/2022w08.md
+++ b/news/weekly-update/2022w08.md
@@ -18,3 +18,4 @@ date: 2022-09-8
 ![img98_3.png](./assets/98-3.jpg)
 ![img98_2.png](./assets/98-2.jpg)
 ![img98_4.png](./assets/98-4.jpg)
+![23481663398638.jpg](./assets/23481663398638.jpg)
