--- a/news/weekly-update/2022w13.md
+++ b/news/weekly-update/2022w13.md
@@ -6,7 +6,7 @@ tags: [weekly Update]
 date: 2022-11-8
 ---
 
-# Web3/区块链/加密/NFT等领域名词和俚语大全
+# [Web3/区块链/加密/NFT等领域名词和俚语大全](https://mp.weixin.qq.com/s?__biz=MzI1NTQ3NjY4MA==&mid=2247484996&idx=1&sn=c285088e9d122fc6b123b127deafc787&chksm=ea3410e3dd4399f50d315c8a0464f3cae86a287dbb2f5a8ae571fc458d49a40a588715c33f06#rd)
 
 ## A
 
