CTF竞赛权威指南(Pwn篇)

--- a/news/weekly-update/2022w15.md
+++ b/news/weekly-update/2022w15.md
@@ -6,10 +6,28 @@ tags: [weekly Update]
 date: 2022-11-30
 ---
 
-原文链接：
+### 总结
+
+Alameda赔了钱，SBF和其他管理层没有选择接受损失，而决定动用FTX的客户存款。这就是导致这颗死星消亡的原因。
+
+（John Ray首先提到自己参与过大量的企业破产工作，接着话锋一转，称FTX的状况前所未见，公司治理漏洞百出，毛头小子掌握大权。）
+
+为何SBF需要通过发挥其社交本领，哄骗西方主导的整个金融精英系统，让他们落入他和FTX的圈套，以及他是如何做到的。
+
+。他的穿着、住所、饮食、信仰，全是演的。他创造出SBF这个角色，以愚弄所有人。他一度成功了，但最终，他对风险管理的公然藐视撞上了天地不仁的市场铁板。
+
+【信任理论】
+
+假设外星人要依照刻板印象从人类中选出一名财务经理，最后一定会选出一名白人男性。因为在电视上，拉美裔男性似乎总是从事建筑或景观美化等体力劳动。女性总是管家或保姆。而他们的老板通常是白人。亚洲人似乎都是擅长数学和科学的好学生,虽然电视上说他们聪明勤奋，但他们给人一种温良而不善交际的印象，似乎不太会管理别人的钱。黑人似乎总是很穷，牵扯很多暴力事件。白人似乎喜欢看黑人参与体育运动。白人似乎永远当家作主，受人尊敬。他们一定最会管钱，最值得信赖。另外，在财经娱乐频道，似乎永远是性感的女性在采访有权势的男性，所以一定要选男性。
+
+### 原文链接：
 https://cryptohayes.medium.com/white-man-5001d38a5e4e
 
-翻译
+### 翻译
+美国种姓制度赢家白人小子SBF是如何迷惑众生的
+https://www.panewslab.com/zh/articledetails/iagrhe9e.html
+
 https://www.panewslab.com/zh/articledetails/8iimx1zu.html
+
 
 
