--- a/news/weekly-update/2022w15.md
+++ b/news/weekly-update/2022w15.md
@@ -26,7 +26,7 @@ https://cryptohayes.medium.com/white-man-5001d38a5e4e
 ### 翻译
 美国种姓制度赢家白人小子SBF是如何迷惑众生的
 https://www.panewslab.com/zh/articledetails/iagrhe9e.html
-
+苍天饶过谁，还原Genesis和DCG事件始末
 https://www.panewslab.com/zh/articledetails/8iimx1zu.html
 
 
