--- a/news/weekly-update/2022w15.md
+++ b/news/weekly-update/2022w15.md
@@ -33,4 +33,6 @@ https://www.panewslab.com/zh/articledetails/iagrhe9e.html
 https://www.panewslab.com/zh/articledetails/8iimx1zu.html
 
 
+关注此人
 
+https://cryptohayes.medium.com/
