去中心化衍生品交易所研究报告2

--- a/news/weekly-update/2022w16.md
+++ b/news/weekly-update/2022w16.md
@@ -16,7 +16,8 @@ December 6, 2022**Wayne**
 
 ![image.png](assets/image-20221207094506-9ml90vr.png)
 
-我们希望梳理清楚去中心化衍生品交易所的市场情况，特别是最受用户喜欢的永续合约产品。报告会从几个头部的协议，包括 dYdX，GMX，Perpetual Protocol 等厘清去中心化永续合约交易的现状，进行数据分析，并展望这个细分赛道未来的发展趋势。![]()
+
+我们希望梳理清楚去中心化衍生品交易所的市场情况，特别是最受用户喜欢的永续合约产品。报告会从几个头部的协议，包括 dYdX，GMX，Perpetual Protocol 等厘清去中心化永续合约交易的现状，进行数据分析，并展望这个细分赛道未来的发展趋势。!
 
 目录
 
